--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+        <powermock.version>1.7.0</powermock.version>
 	</properties>
 
 	<dependencies>
@@ -46,6 +47,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
@@ -65,7 +87,6 @@
 						</goals>
 					</execution>
 					<execution>
-						<id>report</id>
 						<phase>prepare-package</phase>
 						<goals>
 							<goal>report</goal>
@@ -79,7 +100,7 @@
 						</goals>
 						<configuration>
 							<excludes>
-								<exclude>co/com/devco/model/**/*,co/com/devco/devco/**/*</exclude>
+								<exclude>co/com/devco/model/**/*</exclude>
 							</excludes>
 							<!-- Sets the path to the file which contains the execution data. -->
 							<dataFile>target/jacoco.exec</dataFile>
